# tinyhouse

./: .gitignore  Cargo.toml  tinyhouse_ui.d.ts  tinyhouse_ui.js  tinyhouse_ui_bg.wasm  tinyhouse_ui_bg.wasm.d.ts
search/: Cargo.toml
search/src/: lib.rs
tinyhouse/: Cargo.toml  constants.ipynb  main.ipynb
tinyhouse-ui/: Cargo.toml  build.sh  index.html
tinyhouse-ui/src/: app.rs  app_old.rs  lib.rs
tinyhouse/src/: move_gen.rs
